# kernel-v1-x86_64

./: Cargo.toml
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
