[package]
name = "os"
version = "0.1.0"
authors = ["kktsdev"]
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.release.package."*"]
opt-level = 3
strip = "symbols"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
pic8259 = "0.11.0"
spin = "0.9.8"
uart_16550 = "0.3.1"
volatile = "0.3.0"
x86_64 = "0.15.1"
